--- a/public/perfil.html
+++ b/public/perfil.html
@@ -43,7 +43,7 @@
                 <!-- AÑADIDO: Icono de Carrito con Contador (como en las otras páginas) -->
                 <a href="pago.html" id="navCarrito" class="hover:text-gray-300 transition duration-300 relative flex items-center">
                     <!-- Icono de Carrito (SVG de Font Awesome Free) -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="h-6 w-6 fill-current text-white">
+                    <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 576 512" class="h-6 w-6 fill-current text-white">
                         <!--! Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
                         <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7c-26.3 0-45.5-25-38.6-50.4L180.6 96H120.9L109.5 64H24C10.7 64 0 53.3 0 40S10.7 16 24 16zM176 352a64 64 0 1 1 0 128 64 64 0 1 1 0-128zm320 0a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/>
                     </svg>
