--- a/public/registro.html
+++ b/public/registro.html
@@ -74,7 +74,7 @@
     <main class="flex-grow flex items-center justify-center p-4">
         <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
             <h2 class="text-3xl font-bold text-dark-blue text-center mb-6 flex items-center justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 mr-2 text-red-button" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <svg xmlns="https://www.w3.org/2000/svg" class="h-8 w-8 mr-2 text-red-button" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM12 14c-1.474 0-2.828.272-4 .808V21h8v-6.192c-1.172-.536-2.526-.808-4-.808z" />
                 </svg>
                 Registro de Usuario
